# horror-story-generator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PROMPT_REFACTOR_SUMMARY.md  README.md  VERIFICATION_NOTES.md  data_paths.py  horror_story_generator.py  job_manager.py  job_monitor.py  main.py  prompt_builder.py  pyproject.toml  release-please-config.json  research_registry.py  seed_integration.py  seed_registry.py  story_registry.py  story_seed.py  template_loader.py
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  config.yml  design.yml  docs.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  pr-checks.yml  release-please.yml
archive/templates_legacy/: horror_story_prompt_template.json  template_skeletons_v1.json
assets/canonical/: canonical_enum.md
assets/templates/: template_skeletons_v1.json
backups/: .gitignore
docs/: DOCUMENT_MAP.md  OPERATIONAL_STATUS.md  PHASE2A_TEMPLATE_ACTIVATION.md  PHASE2C_DEDUP_CONTROL.md  PHASE2C_RESEARCH_JOB.md  PHASE2_PREPARATION_ANALYSIS.md  PHASE_B_PLUS.md  canonical_enum.md  decision_log.md  n8n_environment_setup.md  n8n_output_validation.md  n8n_workflow_import_guide.md  openapi.yaml  runbook_24h_test.md  system_architecture.md
docs/analysis/: EXECUTION_STRUCTURE_ANALYSIS.md  STEP4B_FINAL_REPORT.md  STEP4B_VALIDATION_REPORT.md  STEP4C_DOCUMENTATION_ALIGNMENT_REPORT.md  STORY_DEDUP_FINAL_VERIFICATION.md
docs/audit/: IMPLEMENTATION_AUDIT.md
docs/core/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DOCUMENT_MAP.md  OPERATIONAL_STATUS.md  README.md  RELEASE_GUIDE.md  ROADMAP.md
docs/data-model/: canonical-data.md
docs/job-scheduler/: API_CONTRACT.md  API_IMPACT.md  CONCURRENCY_OPTIONS.md  DESIGN_GUARDS.md  DOMAIN_MODEL.md  E2E_TEST_PLAN.md  E2E_TEST_REPORT.md  ENTITY_RELATIONSHIPS.md  EXECUTION_FLOW.md  IMPLEMENTATION_PLAN.md  JOBGROUP_BEHAVIOR_OPTIONS.md  PERSISTENCE_SCHEMA.md  RECOVERY_SCENARIOS.md  TEST_STRATEGY.md
docs/phase_b/: dedup_signal_policy.md  overview.md
docs/technical/: BACKUP_RESTORE_GUIDE.md  CANONICAL_KEY_APPLICATION_SCOPE.md  FUTURE_VECTOR_BACKEND_NOTE.md  JOB_SCHEDULER_DESIGN.md  KU_TO_CANONICAL_KEY_RULES.md  REGISTRY_BACKUP_GUIDE.md  RESEARCH_DEDUP_SETUP.md  STORY_SEMANTIC_DEDUP.md  SYNC_WEBHOOK_DESIGN.md  TODO_INDEX.md  TRIGGER_API.md  canonical_enum.md  dataflow.md  decision_log.md  job-scheduler-AS_IS_TO_BE_API_DESIGN-v1.md  openapi.yaml  runbook_24h_test.md
docs/verification/: FULL_PIPELINE_TEST_20260113.md  GEMINI_DEEP_RESEARCH_VERIFICATION.md  MODEL_SELECTION_VERIFICATION.md  RELEASE_v1.2.1_SUMMARY.md  SECURITY_PATCH_v1.3.2.md  STORY_GENERATION_E2E_TEST.md  V131_TECH_DEBT_CLEANUP_TEST.md  WEBHOOK_NOTIFICATIONS_TEST.md
n8n_workflows/: 01_basic_generation.json  02_template_selection.json
phase1_foundation/00_raw_research/: results.json
phase1_foundation/01_knowledge_units/: knowledge_units.json
research_api/: __init__.py  main.py
research_dedup/: __init__.py  dedup.py  embedder.py  index.py
research_executor/: __init__.py  __main__.py  cli.py  config.py  executor.py  prompt_template.py
research_integration/: loader.py
schema/: canonical_key.schema.json
scripts/: backup.sh  backup_config.sh  restore.sh  verify_backup.sh  verify_unified_pipeline.py
src/: __init__.py
tests/: conftest.py  test_api_auth.py  test_api_client.py  test_api_endpoints.py  test_canonical_collapse.py  test_canonical_extractor.py  test_data_paths.py  test_dedup_service.py  test_embedder_mock.py  test_faiss_index.py  test_horror_story_generator.py  test_job_manager.py  test_job_monitor.py  test_jobs_router.py  test_logging_config.py  test_model_provider.py  test_ollama_resource.py  test_prompt_builder.py  test_research_context.py  test_research_context_repository.py  test_research_dedup.py  test_research_integration_loader.py  test_research_integration_selector.py  test_research_registry.py  test_research_router.py  test_research_service.py  test_seed_integration.py  test_seed_registry.py  test_similarity.py  test_story_dedup.py  test_story_registry.py  test_story_seed.py  test_story_seed_mock.py  test_story_semantic_dedup.py  test_sync_webhook.py  test_target_length.py  test_template_loader.py  test_vector_backend_hooks.py  test_webhook.py
(+144 files in other folders)
