[tool.poetry]
name = "horror-story-generator"
version = "1.4.1"
description = "Korean horror story generator using Claude API with research integration"
authors = ["VinylStage <mcpe9869@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = ">=1.0.0,<2.0.0"
anthropic = ">=0.40.0,<1.0.0"
fastapi = "^0.128.0"
uvicorn = "^0.32.0"
faiss-cpu = ">=1.7.0"
httpx = ">=0.27.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:faiss.*:",
    "ignore:builtin type Swig.*:DeprecationWarning",
]

[tool.coverage.run]
source = [
    "data_paths",
    "research_dedup",
    "research_registry",
    "story_seed",
    "seed_registry",
    "seed_integration",
    "prompt_builder",
    "research_api"
]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
